[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/storePages/storeInt1.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://building_interior/shop/TabContainer.gd" type="Script" id=3]
[ext_resource path="res://data/storePages/storeInt2.png" type="Texture" id=4]
[ext_resource path="res://data/storePages/background.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 16.0
margin_right = 1024.0
margin_bottom = 600.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clothing and Accessories" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0

[node name="storeInt1" type="Sprite" parent="TabContainer/Clothing and Accessories"]
position = Vector2( 496, 277 )
scale = Vector2( 0.614583, 0.568889 )
texture = ExtResource( 1 )

[node name="blueShirtBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 306.0
margin_top = 242.0
margin_right = 331.0
margin_bottom = 303.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heartShirtBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 584.0
margin_top = 242.0
margin_right = 610.0
margin_bottom = 303.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rainbowShirtBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 864.0
margin_top = 244.0
margin_right = 890.0
margin_bottom = 306.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blackPantsBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 307.0
margin_top = 427.0
margin_right = 333.0
margin_bottom = 488.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sunglassesBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 585.0
margin_top = 428.0
margin_right = 611.0
margin_bottom = 489.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dogBut" type="Button" parent="TabContainer/Clothing and Accessories"]
margin_left = 865.0
margin_top = 430.0
margin_right = 891.0
margin_bottom = 491.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Houses" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0

[node name="storeInt2" type="Sprite" parent="TabContainer/Houses"]
position = Vector2( 496, 276.646 )
scale = Vector2( 0.614583, 0.568889 )
texture = ExtResource( 4 )

[node name="smallHouseBut" type="Button" parent="TabContainer/Houses"]
margin_left = 388.0
margin_top = 396.0
margin_right = 420.0
margin_bottom = 472.0
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="largeHouseBut" type="Button" parent="TabContainer/Houses"]
margin_left = 811.545
margin_top = 396.472
margin_right = 842.545
margin_bottom = 471.472
rect_rotation = 90.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mortgage" type="Control" parent="TabContainer/Houses"]
visible = false
margin_top = -3.0
margin_right = 984.0
margin_bottom = 554.0

[node name="mortgagePanel" type="Panel" parent="TabContainer/Houses/mortgage"]
margin_left = 112.0
margin_top = 128.0
margin_right = 880.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 192.0
margin_top = 24.0
margin_right = 576.0
margin_bottom = 57.0
text = "MORTGAGE (ACCEPTED)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyLabel" type="Label" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 144.0
margin_top = 72.0
margin_right = 624.0
margin_bottom = 144.0
text = "You do not have enough money, please apply for mortgage."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="Button" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 200.0
margin_top = 280.0
margin_right = 320.0
margin_bottom = 323.0
text = "CONFIRM"

[node name="cancel" type="Button" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 408.0
margin_top = 280.0
margin_right = 560.0
margin_bottom = 323.0
text = "CANCEL"

[node name="percentSpinBox" type="SpinBox" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 440.0
margin_top = 176.0
margin_right = 586.0
margin_bottom = 219.0
min_value = 1.0
value = 1.0

[node name="Label" type="Label" parent="TabContainer/Houses/mortgage/mortgagePanel"]
margin_left = 112.0
margin_top = 152.0
margin_right = 376.0
margin_bottom = 257.0
text = "Enter percent you want to pay with mortgage"
autowrap = true

[node name="notif" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 43.0
margin_right = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmation" type="Panel" parent="notif"]
visible = false
margin_left = 112.0
margin_top = 125.0
margin_right = 880.0
margin_bottom = 477.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmBut" type="Button" parent="notif/confirmation"]
margin_left = 184.0
margin_top = 264.0
margin_right = 344.0
margin_bottom = 307.0
text = "CONFIRM"

[node name="cancelBut" type="Button" parent="notif/confirmation"]
margin_left = 424.0
margin_top = 264.0
margin_right = 584.0
margin_bottom = 307.0
text = "CANCEL"

[node name="confirmationLabel" type="Label" parent="notif/confirmation"]
margin_left = 72.0
margin_top = 32.0
margin_right = 696.0
margin_bottom = 65.0
text = "CONFIRMATION!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmationMsg" type="Label" parent="notif/confirmation"]
margin_left = 64.0
margin_top = 120.0
margin_right = 704.0
margin_bottom = 208.0
align = 1
autowrap = true

[node name="money" type="Panel" parent="notif"]
visible = false
margin_left = 112.0
margin_top = 125.0
margin_right = 880.0
margin_bottom = 477.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screwU" type="Label" parent="notif/money"]
margin_left = 240.0
margin_top = 104.0
margin_right = 528.0
margin_bottom = 137.0
text = "Not enough money!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="okBut" type="Button" parent="notif/money"]
margin_left = 256.0
margin_top = 208.0
margin_right = 512.0
margin_bottom = 251.0
text = "UNDERSTOOD"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TabContainer/Clothing and Accessories/blueShirtBut" to="." method="_on_blueShirtBut_pressed"]
[connection signal="pressed" from="TabContainer/Clothing and Accessories/heartShirtBut" to="." method="_on_heartShirtBut_pressed"]
[connection signal="pressed" from="TabContainer/Clothing and Accessories/rainbowShirtBut" to="." method="_on_rainbowShirtBut_pressed"]
[connection signal="pressed" from="TabContainer/Clothing and Accessories/blackPantsBut" to="." method="_on_blackPantsBut_pressed"]
[connection signal="pressed" from="TabContainer/Clothing and Accessories/sunglassesBut" to="." method="_on_sunglassesBut_pressed"]
[connection signal="pressed" from="TabContainer/Clothing and Accessories/dogBut" to="." method="_on_dogBut_pressed"]
[connection signal="pressed" from="TabContainer/Houses/smallHouseBut" to="." method="_on_smallHouseBut_pressed"]
[connection signal="pressed" from="TabContainer/Houses/largeHouseBut" to="." method="_on_largeHouseBut_pressed"]
[connection signal="pressed" from="TabContainer/Houses/mortgage/mortgagePanel/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="TabContainer/Houses/mortgage/mortgagePanel/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="notif/confirmation/confirmBut" to="." method="_on_confirmBut_pressed"]
[connection signal="pressed" from="notif/confirmation/cancelBut" to="." method="_on_cancelBut_pressed"]
[connection signal="pressed" from="notif/money/okBut" to="." method="_on_okBut_pressed"]
